--- a/parking/package.json
+++ b/parking/package.json
@@ -26,6 +26,7 @@
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
+    "expo-network": "^7.0.3",
     "expo-router": "~4.0.11",
     "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.15",
