--- a/parking/app.json
+++ b/parking/app.json
@@ -14,7 +14,8 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "usesCleartextTraffic": true
       },
       "package": "pardis.parking"
     },
@@ -28,18 +29,10 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/parking-icon.png",
+          "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "black"
-        }
-      ],
-      [
-        "expo-build-properties",
-        {
-          "android": {
-            "usesCleartextTraffic": true
-          }
+          "backgroundColor": "#ffffff"
         }
       ]
     ],
