--- a/parking/package.json
+++ b/parking/package.json
@@ -23,11 +23,11 @@
     "expo-blur": "~14.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.1",
+    "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-network": "^7.0.3",
-    "expo-router": "~4.0.11",
+    "expo-router": "~4.0.14",
     "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.15",
     "expo-status-bar": "~2.0.0",
@@ -54,7 +54,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "eas-cli": "^14.2.0",
-    "expo": "^52.0.19",
+    "expo": "~52.0.20",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
